// add 1.2 block of exercises and 1.1 exercise solution

--- a/Exercise 1.2/index.html
+++ b/Exercise 1.2/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Jordi Lara">
-    <title>Exercise 1.1 from module 2</title>
+    <title>Exercise 1.2 from module 2</title>
 </head>
 <body>
-    
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, corporis.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, ratione.</p>
 
     <script src="index.js"></script>
 
